deployment/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumlr-dashboard
  template:
    metadata:
      labels: 
        app: scrumlr-dashboard
    spec:
      containers:
        - name: scrumlr-dashboard
          image: parseplatform/parse-dashboard
          args: ["--dev", "--appId", "Scrumlr", "--masterKey", "masterKey", "--serverURL", "http://localhost:4000/api"]
          imagePullPolicy: Never
          ports:
            - containerPort: 4040
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: scrumlr-dashboard
spec:
  type: NodePort
  ports:
    - port: 4040
      targetPort: 4040
      protocol: TCP
      nodePort: 30040
  selector:
    app: scrumlr-dashboard
