deployment/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumlr-database
  template:
    metadata:
      labels: 
        app: scrumlr-database
    spec:
      containers:
        - name: scrumlr-database
          image: mongo
          imagePullPolicy: Never
          ports:
            - containerPort: 27017
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: scrumlr-database
spec:
  type: NodePort
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: scrumlr-database
