deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumlr-frontend
  template:
    metadata:
      labels: 
        app: scrumlr-frontend
    spec:
      containers:
        - name: scrumlr-frontend
          image: scrumlr-frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: scrumlr-frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30100
  selector:
    app: scrumlr-frontend
