deployment/livequery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-livequery
spec:
  replicas: 3
  selector:
    matchLabels:
      app: scrumlr-livequery
  template:
    metadata:
      labels: 
        app: scrumlr-livequery
    spec:
      containers:
        - name: scrumlr-livequery
          image: scrumlr-parse
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: scrumlr-livequery
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: scrumlr-livequery
