deployment/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumlr-cache
  template:
    metadata:
      labels: 
        app: scrumlr-cache
    spec:
      containers:
        - name: scrumlr-cache
          image: redis
          imagePullPolicy: Never
          ports:
            - containerPort: 6379
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: scrumlr-cache
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: scrumlr-cache
