deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrumlr-ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scrumlr-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: scrumlr-server
            port:
              number: 4000
