deployment/websocket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrumlr-websocket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: scrumlr-livequery
            port:
              number: 4000
